# apricot

./: .gitignore  Cargo.toml  README.md
crates/proc_macro/: Cargo.toml
crates/proc_macro/src/: lib.rs  struct_def.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
src/: lib.rs  main.rs
src/core/: app.rs  app_wrapper.rs  context.rs  inner.rs  mod.rs  navigation.rs  screen.rs  widget.rs  widgets_misc.rs
src/misc/: mod.rs
